[gd_scene load_steps=9 format=3 uid="uid://ctu15q5nru2j"]

[ext_resource type="Texture2D" uid="uid://by0cyxp5ed7nk" path="res://Menu.png" id="1_5aiwa"]
[ext_resource type="Script" path="res://upgrade_screen.gd" id="2_vm166"]
[ext_resource type="FontFile" uid="uid://dhi4oqbjfmdwp" path="res://joystix monospace.otf" id="3_qxmtn"]
[ext_resource type="PackedScene" path="res://upgrade.tscn" id="4_owyjv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cqsu5"]
texture = ExtResource("1_5aiwa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_eog8d"]
sources/0 = SubResource("TileSetAtlasSource_cqsu5")

[sub_resource type="LabelSettings" id="LabelSettings_o874w"]
font = ExtResource("3_qxmtn")
font_size = 70
font_color = Color(0.917647, 0.901961, 0.87451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h6q6q"]
line_spacing = 38.185
font = ExtResource("3_qxmtn")
font_size = 70
font_color = Color(0.917647, 0.901961, 0.87451, 1)

[node name="upgrade_screen" type="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_eog8d")
format = 2
layer_0/tile_data = PackedInt32Array(-65539, 65536, 1, -65538, 65536, 1, -65537, 65536, 1, -131072, 65536, 1, -131071, 65536, 1, -131070, 65536, 1, -2, 65536, 1, -1, 65536, 1, -65536, 65536, 1, -65535, 65536, 1, -65534, 65536, 1, 2, 65536, 1, 65538, 65536, 1, 131074, 65536, 1, -3, 65536, 1, 65533, 65536, 1, 131069, 65536, 1, 196605, 65536, 1, 196606, 65536, 1, 196607, 65536, 1, 131072, 65536, 1, 131073, 65536, 1, 65537, 65536, 1, 65536, 65536, 1, 131071, 65536, 1, 131070, 65536, 1, 65534, 65536, 1, 65535, 65536, 1, 0, 65536, 1, 1, 65536, 1, -131077, 0, 0, 196612, 131072, 2, 262139, 131072, 0, -196604, 0, 2, 131076, 65536, 2, 65540, 65536, 2, 4, 65536, 2, -65532, 65536, 2, -131068, 65536, 2, 196611, 131072, 1, 196610, 131072, 1, 196609, 131072, 1, 196608, 131072, 1, 262143, 131072, 1, 262142, 131072, 1, 262141, 131072, 1, 262140, 131072, 1, 196603, 65536, 0, 131067, 65536, 0, 65531, 65536, 0, -5, 65536, 0, -65541, 65536, 0, -131076, 0, 1, -131075, 0, 1, -131074, 0, 1, -131073, 0, 1, -196608, 0, 1, -196607, 0, 1, -196606, 0, 1, -196605, 0, 1, -131069, 65536, 1, -4, 65536, 1, -65540, 65536, 1, 131075, 65536, 1, 65539, 65536, 1, 3, 65536, 1, -65533, 65536, 1, 196604, 65536, 1, 131068, 65536, 1, 65532, 65536, 1)
script = ExtResource("2_vm166")

[node name="lvlup" type="Label" parent="."]
offset_left = -104.0
offset_top = -48.0
offset_right = 1307.0
offset_bottom = 72.0
scale = Vector2(0.15, 0.15)
text = "level up!"
label_settings = SubResource("LabelSettings_o874w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="desc" type="Label" parent="."]
offset_left = -69.0
offset_top = -35.0
offset_right = 1342.0
offset_bottom = 85.0
scale = Vector2(0.1, 0.1)
text = "CHoose An Upgrade"
label_settings = SubResource("LabelSettings_o874w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="desc2" type="Label" parent="."]
offset_left = -67.0
offset_top = -13.0
offset_right = 687.0
offset_bottom = 437.0
scale = Vector2(0.1, 0.1)
text = "bomb radius
fuse time
bomb cooldown
multi-throw
"
label_settings = SubResource("LabelSettings_h6q6q")
vertical_alignment = 1

[node name="bomb_radius" parent="." instance=ExtResource("4_owyjv")]
position = Vector2(46, -13)

[node name="fuse_time" parent="." instance=ExtResource("4_owyjv")]
position = Vector2(46, -1)

[node name="bomb_cd" parent="." instance=ExtResource("4_owyjv")]
position = Vector2(46, 11)

[node name="multi_throw" parent="." instance=ExtResource("4_owyjv")]
position = Vector2(46, 23)

[connection signal="upgraded" from="bomb_radius" to="." method="_on_bomb_radius_upgraded"]
[connection signal="upgraded" from="fuse_time" to="." method="_on_fuse_time_upgraded"]
[connection signal="upgraded" from="bomb_cd" to="." method="_on_bomb_cd_upgraded"]
[connection signal="upgraded" from="multi_throw" to="." method="_on_multi_throw_upgraded"]
